--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@
   --red: #ff0000;
   --yellow: #f7c977;
   --green: #99bf40;
+  --pink: #f25c9d;
 
   --blue-dark: #222888;
 
@@ -40,11 +41,14 @@
 
 html,
 body {
+  background-color: #f5f5f5;
+
   width: 100dvw;
   height: 100dvh;
-  overflow: hidden;
 
   margin: 0;
+
+  overflow: hidden;
 
   font-family: var(--font-main);
   font-size: var(--font-size-middle);
