디딤돌 신청 페이지 일부 완료

--- a/src/Pages/2_EnrollPages/2_InfoPage/Components/InfoCarousel.module.css
+++ b/src/Pages/2_EnrollPages/2_InfoPage/Components/InfoCarousel.module.css
@@ -16,6 +16,7 @@
 
 .infoCarouselItem {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 24px;
@@ -45,6 +46,7 @@
   padding: 0;
 
   width: 100%;
+  max-width: 400px;
   height: 250px;
 
   overflow: hidden;
@@ -62,9 +64,6 @@
 }
 
 .nextPageButton {
-  position: fixed;
-  bottom: 10%;
-
   background-color: var(--blue-primary);
 
   font-weight: 600;
