--- a/src/index.css
+++ b/src/index.css
@@ -24,8 +24,12 @@
   --yellow: #f7c977;
   --green: #99bf40;
   --pink: #f25c9d;
-
+  --orange: #f0a370;
+  --sky-blue: #8acdf4;
   --blue-dark: #222888;
+  --tangerine: #eb7452;
+
+  --gray: #d9d9d9;
 
   /* sizes */
   --font-size-x-large: 32px;
