--- a/src/Pages/1_LoginPage/Components/LoginForm.module.css
+++ b/src/Pages/1_LoginPage/Components/LoginForm.module.css
@@ -3,8 +3,6 @@
   flex-direction: column;
   align-items: center;
 
-  margin-top: 24px;
-
   width: 100%;
 }
 
@@ -63,6 +61,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  position: fixed;
+  bottom: 25dvh;
 
   background-color: var(--blue-primary);
 
