수강신청 엔드페이지까지 작성 완료

--- a/src/Pages/2_EnrollPages/2_InfoPage/Components/InfoData.module.css
+++ b/src/Pages/2_EnrollPages/2_InfoPage/Components/InfoData.module.css
@@ -25,3 +25,11 @@
   text-align: center;
   color: var(--blue-dark);
 }
+
+.infoDescription .bold {
+  font-weight: 600;
+}
+
+.infoDescription .pink {
+  color: var(--pink);
+}
