--- a/src/Pages/2_EnrollPages/4_SelectPage/index.module.css
+++ b/src/Pages/2_EnrollPages/4_SelectPage/index.module.css
@@ -24,6 +24,8 @@
   display: flex;
   justify-content: space-evenly;
 
+  margin-top: 16px;
+
   width: 100%;
   max-width: 400px;
 }
@@ -159,6 +161,23 @@
 
 .confirmButton:disabled {
   background-color: var(--gray);
+}
+
+.loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  position: fixed;
+  left: 0;
+  top: 0;
+
+  background-color: rgba(0, 0, 0, 0.5);
+
+  width: 100dvw;
+  height: 100dvh;
+
+  z-index: 11;
 }
 
 @media (max-height: 750px) {
