Revert "선택한 클래스는 색이 바뀌게"
This reverts commit 69c369299e4074d93c72bf65ba426c42da3332d7.

--- a/src/Pages/2_EnrollPages/4_SelectPage/Components/SelectedClassContainer.module.css
+++ b/src/Pages/2_EnrollPages/4_SelectPage/Components/SelectedClassContainer.module.css
@@ -11,6 +11,8 @@
   align-items: center;
   gap: 16px;
 
+  background-color: var(--blue-primary);
+
   border-radius: 24px;
 
   padding: 8px 16px;
