--- a/src/Pages/2_EnrollPages/4_SelectPage/Components/ClassDetailContainer.module.css
+++ b/src/Pages/2_EnrollPages/4_SelectPage/Components/ClassDetailContainer.module.css
@@ -2,7 +2,7 @@
   position: fixed;
   top: 0;
 
-  /*background-color: var(--blue-primary);*/
+  background-color: var(--blue-primary);
 
   border-radius: 32px 32px 0 0;
 
