--- a/src/Pages/2_EnrollPages/6_EndPage/index.module.css
+++ b/src/Pages/2_EnrollPages/6_EndPage/index.module.css
@@ -42,3 +42,13 @@
 
   font-size: var(--font-size-small);
 }
+
+.button{
+  background-color: var(--blue-primary);
+  color: var(--white);
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 19px;
+  letter-spacing: 0em;
+  text-align: center;
+}
