--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@
   --orange: #f0a370;
   --sky-blue: #8acdf4;
   --blue-dark: #222888;
+  --night-blue: #4753A7;
   --tangerine: #eb7452;
 
   --gray: #d9d9d9;
