--- a/src/Pages/3_MainPages/DashboardPage/Components/AttendanceLogContainer.module.css
+++ b/src/Pages/3_MainPages/DashboardPage/Components/AttendanceLogContainer.module.css
@@ -1,5 +1,5 @@
 .contentLogContainer {
-  width: 80%;
+  width: 90%;
 }
 
 .contentLogHeader {
@@ -11,6 +11,7 @@
 .filterButtonContainer {
   display: flex;
   gap: 8px;
+  justify-content: center;
 }
 
 .filterButton {
@@ -40,11 +41,10 @@
   flex-direction: column;
 
   position: relative;
-  left: -5%;
 
   margin-top: 8px;
 
-  width: 110%;
+  width: 100%;
 }
 
 .logItem {
