--- a/src/Pages/3_MainPages/DashboardPage/Components/StatusContainer.module.css
+++ b/src/Pages/3_MainPages/DashboardPage/Components/StatusContainer.module.css
@@ -1,7 +1,7 @@
 .statusContainer {
   margin-top: 32px;
 
-  width: 80%;
+  width: 90%;
 }
 
 .statusHeaderWrapper {
@@ -26,9 +26,34 @@
 .statusBox {
   width: 100%;
 
-  padding: 32px 32px 16px;
 
   border-radius: 8px;
+
+  display: flex;
+}
+
+.statusContentWrapper {
+  width: 100%;
+  
+  padding: 32px 32px 16px;
+}
+.statusContentWrapperShrink {
+  width: 55%;
+  min-width: 190px;
+
+  padding: 8px;
+}
+.statusBackgroundImageWrapper{
+  flex-grow: 1;
+  overflow: hidden;
+  position: relative;
+}
+.statusBackgroundImageWrapper>img{
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .statusWrapper {
@@ -37,6 +62,7 @@
   align-items: flex-end;
 
   margin-bottom: 16px;
+  
 }
 
 .statusItemWrapper {
@@ -68,11 +94,11 @@
 .statusValue {
   font-weight: 600;
   font-size: var(--font-size-large);
+  color: var(--black);
 }
 
 .statusLabel {
   font-size: var(--font-size-small);
-  color: var(--white);
 }
 
 .horizontalLine {
@@ -84,4 +110,6 @@
 
   font-size: var(--font-size-small);
   text-align: center;
+
+  color: var(--black);
 }
