disabled button color

--- a/src/Pages/2_EnrollPages/4_SelectPage/Components/ClassDetailContainer.module.css
+++ b/src/Pages/2_EnrollPages/4_SelectPage/Components/ClassDetailContainer.module.css
@@ -171,6 +171,10 @@
   color: var(--white);
 }
 
+.inputSelectionButton:disabled{
+  background-color: var(--gray);
+}
+
 .fadeOut {
   position: fixed;
   bottom: 0;
