튀어나온것 수정

--- a/src/Pages/2_EnrollPages/4_SelectPage/index.module.css
+++ b/src/Pages/2_EnrollPages/4_SelectPage/index.module.css
@@ -78,8 +78,11 @@
   width: 100%;
   aspect-ratio: 3 / 4;
 
-  font-size: var(--font-size-middle);
+  font-size: var(--font-size-small);
   color: var(--white);
+}
+.classTitle {
+  font-size: var(--font-size-middle);
 }
 /*
 .classItem:nth-child(1) > .classButton {
