--- a/src/Pages/2_EnrollPages/4_SelectPage/index.module.css
+++ b/src/Pages/2_EnrollPages/4_SelectPage/index.module.css
@@ -81,7 +81,7 @@
   font-size: var(--font-size-small);
   color: var(--white);
 }
-.classTitle {
+.classButton .classTitle {
   font-size: var(--font-size-middle);
 }
 /*
